--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <!-- Item 4 -->
       <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden cursor-pointer group" onclick="openPreview(this)">
-          <img src="dist/img/figma.png" alt="Figma Aplikasi Android Info Wisata" class="w-full transition-transform duration-300 group-hover:scale-105"/>
+          <img src="dist/img/figma2.png" alt="Figma Aplikasi Android Info Wisata" class="w-full transition-transform duration-300 group-hover:scale-105"/>
         </div>
         <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Figma Aplikasi Android Info Wisata</h3>
         <p class="font-medium text-base text-dark">
