--- a/index.html
+++ b/index.html
@@ -225,6 +225,55 @@
           Prototype aplikasi informasi wisata di Bali yang menampilkan lokasi, deskripsi, dan galeri destinasi.
         </p>
       </div>
+
+       <!-- Item 5 -->
+      <div class="mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden cursor-pointer group">
+          <img src="dist/img/nobar.png" alt="Poster Kegiatan Kampus" class="w-full h-auto aspect-video object-cover transition-transform duration-300 group-hover:scale-105"/>
+        </div>
+        <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Poster Nonton Bareng</h3>
+        <p class="font-medium text-base text-dark">
+           Poster promosi acara nonton bareng pertandingan <strong>Bali United FC vs Persib Bandung</strong> yang diselenggarakan di De Berry Cafe & Resto, dengan desain dinamis bertema sepak bola modern.
+        </p>
+      </div>
+
+      <!-- Item 6 -->
+      <div class="mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden cursor-pointer group">
+          <img src="dist/img/bpom1.png" alt="Poster Event Multimedia" class="w-full h-auto aspect-video object-cover transition-transform duration-300 group-hover:scale-105"/>
+        </div>
+        <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Poster Bahaya Obat BBPOM di Denpasar</h3>
+        <p class="font-medium text-base text-dark">
+          Poster kampanye edukatif mengenai bahaya obat tradisional mengandung bahan kimia obat (BKO), dibuat untuk mendukung program sosialisasi kesehatan masyarakat oleh BBPOM di Denpasar.
+        </p>
+      </div>
+
+      <div class="mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden">
+          <video controls class="w-full aspect-[9/16] object-cover rounded-md">
+            <source src="dist/video/vertikal.mp4" type="video/mp4">
+            Browser kamu tidak mendukung pemutar video.
+          </video>
+        </div>
+        <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Video Konten Edukasi si Proton</h3>
+        <p class="font-medium text-base text-dark">
+          Video singkat tentang inovasi Si Proton BBPOM diDenpasar yang memudahkan, mengingatkan, dan mempercepat proses input hasil uji laboratorium secara efisien
+        </p>
+      </div>
+
+      <!-- Item 8 - Video Horizontal -->
+      <div class="mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden">
+          <video controls class="w-full aspect-video object-cover rounded-md">
+            <source src="dist/video/horizontal.mp4" type="video/mp4">
+            Browser kamu tidak mendukung pemutar video.
+          </video>
+        </div>
+        <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Video Konten Edukasi Keamanan Obat</h3>
+        <p class="font-medium text-base text-dark">
+          Video edukatif tentang pentingnya penggunaan obat Dextromethorphan secara bijak serta upaya BBPOM di Denpasar sebagai garda terdepan dalam pengawasan dan pencegahan penyalahgunaan obat.
+        </p>
+      </div>
     </div>
   </div>
   
