--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
        <!-- Item 5 -->
       <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden cursor-pointer group">
-          <img src="dist/img/nobar.png" alt="Poster Kegiatan Kampus" class="w-full h-auto aspect-video object-cover transition-transform duration-300 group-hover:scale-105"/>
+          <img src="dist/img/nobar.png" alt="Poster Nobar" class="w-full h-auto aspect-video object-cover transition-transform duration-300 group-hover:scale-105"/>
         </div>
         <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Poster Nonton Bareng</h3>
         <p class="font-medium text-base text-dark">
@@ -240,7 +240,7 @@
       <!-- Item 6 -->
       <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden cursor-pointer group">
-          <img src="dist/img/bpom1.png" alt="Poster Event Multimedia" class="w-full h-auto aspect-video object-cover transition-transform duration-300 group-hover:scale-105"/>
+          <img src="dist/img/bpom1.png" alt="Poster BBPOM" class="w-full h-auto aspect-video object-cover transition-transform duration-300 group-hover:scale-105"/>
         </div>
         <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Poster Bahaya Obat BBPOM di Denpasar</h3>
         <p class="font-medium text-base text-dark">
