--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
           <video controls class="w-full aspect-[9/16] object-cover rounded-md">
-            <source src="dist/video/vertikal.mp4" type="video/mp4">
+            <source src="dist/img/vertikal.mp4" type="video/mp4">
             Browser kamu tidak mendukung pemutar video.
           </video>
         </div>
@@ -265,7 +265,7 @@
       <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
           <video controls class="w-full aspect-video object-cover rounded-md">
-            <source src="dist/video/horizontal.mp4" type="video/mp4">
+            <source src="dist/img/horizontal.mp4" type="video/mp4">
             Browser kamu tidak mendukung pemutar video.
           </video>
         </div>
