--- a/index.html
+++ b/index.html
@@ -261,6 +261,19 @@
         </p>
       </div>
 
+        <div class="mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden">
+          <video controls class="w-full aspect-[9/16] object-cover rounded-md">
+            <source src="dist/video/videoproperty.mp4" type="video/mp4">
+            Browser kamu tidak mendukung pemutar video.
+          </video>
+        </div>
+        <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Video Konten Property</h3>
+        <p class="font-medium text-base text-dark">
+          Video singkat tentang review rumah atau property dengan segala fasilitas di dalam nya dan juga di halaman luar rumah, menjadikan salah satu rumah impian bagi keluarga yang ingin rumah tenang, 2 lantai dan lumayan luas
+        </p>
+      </div>
+
       <!-- Item 8 - Video Horizontal -->
       <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
