--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
           <video controls class="w-full aspect-[9/16] object-cover rounded-md">
-            <source src="dist/video/videoproperty.mp4" type="video/mp4">
+            <source src="dist/img/videoproperty.mp4" type="video/mp4">
             Browser kamu tidak mendukung pemutar video.
           </video>
         </div>
