--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
         <h4 class="font-bold text-lg text-primary mb-2">Kontak</h4>
         <h2 class="font-semibold text-dark text-3xl mb-4">Hubungi Saya</h2>
         <p class="font-medium text-md text-dark">
-          Berikut beberapa projek yang telah saya kerjakan, baik secara individu maupun dalam tim.
+         Jika ada pertanyaan atau saran, bisa langsung mengisi form di bawah untuk menghubungi saya.
         </p>
       </div>
 
